5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1637_2703.log
== TEST (2019-04-09 10:32:34) 
-- CODE:
idade = int(input("Digite um numero: "))

if(idade <= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(eleitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(eleitor)
NameError: name 'eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:33:25) 
-- CODE:
idade = int(input("Digite a idade: "))

if(idade <= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(idade)
-- OUTPUT:
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:33:48) 
-- CODE:
idade = int(input("Digite a idade: "))

if(idade <= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:34:07) 
-- CODE:
idade = int(input("Digite a idade: "))

if(idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:34:12) 
-- CODE:
idade = int(input("Digite a idade: "))

if(idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- EXECUTION TIME:
0.164326
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
